app/ng-weekly-scheduler.less
@border: 1px solid #ddd;
@handleWidth: 10px;
@headerRowHeight: 15px;
@rowHeight: 28px;

.weekly-schedule-border {
  border-right: @border;
}

.scheduler {
  background: #fff;
  border: @border;
  display: block;
  margin-bottom: 10px;

  &::after {
    content: "";
    display: block;
    clear: both; 
  }

  .labels {
    .weekly-schedule-border;
    display: block;
    float: left;
    text-align: center;

    .srow {
      padding: 0 5px;
    }
  }
  
  schedule-area-container {
    display: block;
    overflow-x: auto;
  }
  
  .srow {
    border-bottom: @border;
    position: relative;
    height: @rowHeight;
    line-height: @rowHeight;

    &:last-child {
      border-bottom: none;
    }
  }

  .timestamps {
    height: @headerRowHeight;
    font-size: 0.6em;
    font-weight: bold;
    text-transform: uppercase;

    .grid-container {
      div {
        .weekly-schedule-border;
        cursor: pointer;
        height: @headerRowHeight;
        line-height: @headerRowHeight;
        padding-left: 2px;
        text-align: left;

        &:hover {
          background-color: #f0f0f0; 
        }

        &:last-child {
          border-right: none;
        }
      }
    }
  }
}

multi-slider {
  @offset: 5px;
  @topOffset: @offset;
  @bottomOffset: @offset;
  @lineHeight: @rowHeight - @topOffset - @bottomOffset;

  position: relative;
  display: block;
  height: @rowHeight;
  overflow: hidden;

  .slot {
    position: absolute;
    top: @topOffset;
    bottom: @bottomOffset;
    border-radius: 3px;
    text-align: center;
    white-space: nowrap;
    line-height: @lineHeight;
    color: #fff;
  }

  .ghost {
    background: #5ab57a;
    opacity: 0.6;
    display: none;
    cursor: pointer;
  }

  &:hover {
    .ghost {
      display: block;
    }
  }

  &.slot-hover {
    .ghost {
      display: none;
    }
  }

  &.dragging .ghost {
    display: none;
  }

  weekly-slot {
    -webkit-transition: background 0.1s ease-in;
    cursor: all-scroll;
    min-width: @handleWidth !important;
    background: #4eb8d5;

    &.disable {
      cursor: not-allowed;
      color: #666;
      background: #c0c0c0;
    }

    .handle {
      position: absolute;
      top: 0;
      bottom: 0;

      &.left, &.right {
        width: @handleWidth;
        background: #000;
        cursor: col-resize;
        opacity: 0.1;
      }
    }

    &.disable {
      .handle {
        cursor: not-allowed;
      }
    }

    .middle {
      overflow: hidden;
      padding: 0 (@handleWidth * 1.5);
      text-overflow: ellipsis;
    }

    .handle {
      &.left:hover, &.right:hover {
        opacity: 0.3;
      }

      &.left {
        left: 0;
      }

      &.right {
        right: 0;
      }
    }

    &:not(.disable) {
      .remove {
        @removeWidth: @lineHeight;

        display: none;
        cursor: pointer;
        float: right;
        margin-right: -(@removeWidth + @offset);
        width: @removeWidth;
        background: red;
        border-radius: 20%;
        opacity: 0.5;
        transform: translateY(-100%);

        /** This pseudo-element is present to prevent the user from seeing the 'Add' slot when moving the mouse from a weekly-slot to its own 'remove' button */
        &:before {
          position: absolute;
          content: "";
          left: -@offset;
          width: @offset * 2;
          height: @lineHeight;
        }
      }
    }

    &:hover {
      .remove {
        display: block;
      }
    }

    .remove {
      &:hover {
        opacity: 1;
      }
    }

    &.active {
      z-index: 10;
      background: #5ab57a;
      color: #fff;
    }
  }
}

.grid-container {
  width: 100%;
  position: absolute;
  top: 0;
  bottom: 0;

  div {
    box-sizing: border-box;
    float: left;
    height: 100%;
    overflow: hidden;
    text-align: center;
  }

  &.striped div:nth-child(even) {
    background: #fafafa;
  }
}

/*--------------------------------------------------------------- Animations */
.schedule-animate {
  transition: opacity 200ms ease-out;

  &.ng-enter, &.ng-hide-remove {
    opacity: 0;
  }

  &.ng-leave, &.ng-hide-add {
    display: none;
    opacity: 1;
  }
}

